final fixes i hope